@@ -22,6 +22,7 @@ Date: ??.??.??
       - Hid Electrowinning cells. Moved their recipes to Electrolyser 4
       - Hid Desert / Swamp / Temperate environment kits
     - Changed recipe icon for Slag 1 and Slag 2 #335
+    - Buffed the output of recipe Carbon 2 #336
   Bugfixes:
     - Fixed tech steam-power missing a locale in some mod configurations #332
 ---------------------------------------------------------------------------------------------------
